[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micropki"
version = "0.1.0"
description = "MicroPKI - Sprint 1: self-signed Root CA with encrypted key storage, certificate generation, and audit logging."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "MicroPKI Student" }]
dependencies = [
  "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
]

[project.scripts]
micropki = "micropki.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"