[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "micropki"
version = "0.1.0"
description = "Minimal PKI project with Root CA, Intermediate CA and end-entity certificate issuance"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "cryptography>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
micropki = "micropki.cli:main"

[tool.setuptools]
packages = ["micropki"]